--- a/index.html
+++ b/index.html
@@ -1,10 +1,1 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>lucky</title>
-  </head>
-  <body>
-    <div id="app"></div>
-  </body>
-</html>
+<!DOCTYPE html><html><head><meta charset=utf-8><title>lucky</title><link href=static/css/app.bbfe2dae60fdf1c72d4481ad48871ddd.css rel=stylesheet></head><body><div id=app></div><script type=text/javascript src=static/js/manifest.41e1a3e13843e123cd6a.js></script><script type=text/javascript src=static/js/vendor.e0a7ead7415f65de9673.js></script><script type=text/javascript src=static/js/app.294779751d794b5d1dd8.js></script></body></html>
